# samruk-erp

./: .gitignore  README.md  docker-compose.yaml  example.env
apps/document-gateway/: Dockerfile  README.md  pyproject.toml
apps/document-gateway/src/: config.py  fastapi_app.py  storage.py
apps/document-gateway/src/bootstrap/: async_settings.py
apps/document-gateway/src/domains/documents/: abstraction.py  model.py
apps/document-gateway/src/gateway/handlers/: async_document.py
apps/document-gateway/src/gateway/schemas/: documents.py
apps/document-gateway/src/infrastructure/: async_unit_of_work.py  db_async.py  hooks.py  unit_of_work.py
apps/document-gateway/src/infrastructure/documents/: orm.py
apps/document-gateway/src/repository/: sqlalchemy_async.py
apps/document-service/: Dockerfile  README.md  pyproject.toml
apps/document-worker/: Dockerfile  README.md  pyproject.toml
apps/document-worker/alembic/: env.py  script.py.mako
apps/document-worker/alembic/versions/: 2951fe3e3371_initial.py  b177df5b0566_add_chunk.py
apps/document-worker/src/: celery_app.py  config.py
apps/document-worker/src/cli/: fastapi_app.py
apps/document-worker/src/domain/: model.py  orm.py
apps/document-worker/src/infrastructure/: async_unit_of_work.py  asyncio_loop.py  db_async.py  hooks.py
apps/document-worker/src/repository/: abstract_repository.py  async_document_repository.py  document_in_memory.py
apps/document-worker/src/tasks/: chunk_vector_search.py  create_document.py  delete_document.py  get_document.py  list_documents.py  update_document.py
apps/user-service/: .dockerignore  Dockerfile  README.md  pyproject.toml
apps/user-service/alembic/: env.py
apps/user-service/alembic/versions/: 2951fe3e3371_initial.py
apps/user-service/src/: config.py  fastapi_app.py
apps/user-service/src/bootstrap/: async_settings.py  settings.py
apps/user-service/src/cli/: demo_app.py  error.py  fastapi_app.py
apps/user-service/src/domains/common/: exceptions.py
apps/user-service/src/domains/users/: abstraction.py  model.py
apps/user-service/src/dto/: commands.py
apps/user-service/src/gateway/handlers/: async_user.py  user.py
apps/user-service/src/gateway/schemas/: users.py
apps/user-service/src/infrastructure/: async_unit_of_work.py  db_async.py  hooks.py  logging.py  middleware.py  notifier.py  unit_of_work.py
apps/user-service/src/infrastructure/users/: orm.py
apps/user-service/src/repository/: sqlalchemy_async.py  user_in_memory.py
apps/user-service/tests/: conftest.py
apps/user-service/tests/e2e/: test_user_api.py
apps/user-service/tests/integration/: test_user_message_bus.py
apps/user-service/tests/unit/: test_user_domain.py
observability/prometheus/: prometheus.yaml
observability/promtail/: promtail.yml
tests/mock-e2e/: Dockerfile  fill_grafana_dashboards.py
tests/runtime/: Dockerfile  test_stack_runtime.py
(+29 files in other folders)
