[project]
name = "document-gateway"
version = "0.1.0"
description = "document gateway service"
authors = [{ name = "Temirlan Ilik", email = "0penguin@mail.ru" }]
readme = "README.md"
requires-python = "~3.12"
dependencies = [
	"patterns @ file:../../packages/patterns",
	"utils @ file:../../packages/utils",
	"uvicorn (>=0.35.0,<0.36.0)",
	"fastapi (>=0.116.1,<0.117.0)",
	"python-multipart (>=0.0.22,<0.0.23)",
	"pydantic (>=2.11.7,<3.0.0)",
	"pydantic-settings (>=2.13.1,<3.0.0)",
	"msgspec (>=0.21.1,<0.22.0)",
	"redis (>=6.4.0,<7.0.0)",
	"celery[redis] (>=5.6.3,<6.0.0)",
	"prometheus-client (>=0.22.1,<0.23.0)",
	"python-logstash-async (>=4.0.2,<5.0.0)",
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false

[tool.poetry.dependencies]
patterns = { develop = true }
utils = { develop = true }